--- a/main.html
+++ b/main.html
@@ -6,8 +6,20 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body >
 	<!-- the entire body must be written by student -->
+
+	 <div>
+    <h1 id="f1">Flowers photos</h1>
+    <p>This section contains beautiful pictures of various types of flowers. They come in many shapes, colors, and sizes, symbolizing nature's beauty.</p>
+  </div>
+
+  <!-- Second Div (Roses Pictures) -->
+  <div>
+    <h1 id="f2">Roses pictures</h1>
+    <p>Roses are one of the most popular flowers, known for their delicate petals and fragrance. They come in various colors, each symbolizing different emotions.</p>
+  </div>
+
     <script type="text/javascript" src="./script.js">
 </script>
 
